--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	</div>
 	
 	<div class="floating_box">
-		<h2>Short Stories</h2>
+		<h2>Writing</h2>
 				
 			<h3><a href="writing/Memories.html">Memories</a></h3>
 			<p class="indent">Science Fiction, 4 minute read</p>
