updated vimconf and added btc address

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
 		<br>		
 		<h2><a href="poetry.html">Poetry</a></h2>
 	</div>
-
 	
+    <footer><p>BTC: <code>bc1qncek0mwfm3mj5uj45mqv7747t9epxglmcm25wd</code></p></footer>
 </body>
+
 </html>
