--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <div class="title">
-	<h1>davidward.github.io</h1>
+	<h1>davidward.io</h1>
 </div>
 
 <body>
@@ -46,7 +46,10 @@
 		<h2><a href="poetry.html">Poetry</a></h2>
 	</div>
 	
-    <footer><p>BTC: <code>bc1qncek0mwfm3mj5uj45mqv7747t9epxglmcm25wd</code></p></footer>
+    <footer>
+        <p>BTC: <code>bc1qncek0mwfm3mj5uj45mqv7747t9epxglmcm25wd</code></p>
+        <p>Last updated: February, 2023</p>
+    </footer>
 </body>
 
 </html>
