--- a/vimConfig.html
+++ b/vimConfig.html
@@ -13,7 +13,7 @@
 		<br>
 
         <button type="button" onClick="copyEvent('copy')">Copy</button>
-		<p>My current configuration:</p>
+		<p>Content of my .vimrc file:</p>
 
 		<code id="copy">
 set bg=dark
