--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<h3><a href="https://github.com/davidward462">GitHub</a></h3>
         <h3><a href="vimConfig.html">Vim Configuration</a><h3>
         <h3><a href="bashAliases.html">Bash Aliases</a><h3>
-        <h3><a href="code.html">Code snippets</a></h3>
+        <!-- <h3><a href="code.html">Code snippets</a></h3> -->
 	</div>
 	
 	<div class="floating_box">
