--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<div class="floating_box">
 		<h2>Computer Science</h2>
 		<h3><a href="https://github.com/davidward462">GitHub</a></h3>
-        <h3><a href="vimConfig.html">Vim Configuration</a><h3>
+        <h3><a href="vimrc.html">Vim Configuration</a><h3>
         <h3><a href="bashAliases.html">Bash Aliases</a><h3>
         <!-- <h3><a href="code.html">Code snippets</a></h3> -->
 	</div>
