--- a/vimrc.html
+++ b/vimrc.html
@@ -13,6 +13,7 @@
 		<br>
 
         <button type="button" onClick="copyEvent('copy')">Copy</button>
+        <p><a href="vimrc.txt">vimrc.txt</a></p>
 		<p>Content of my .vimrc file:</p>
 
 		<code id="copy">
