update bash aliases stuff

--- a/bash_aliases.html
+++ b/bash_aliases.html
@@ -13,6 +13,7 @@
 		<br>
 
         <button type="button" onClick="copyEvent('copy')">Copy</button>
+        <p><a href="bash_aliases.txt">bash_aliases.txt</a></p>
 		<p>Content of my .bash_aliases file:</p>
 
 		<code id="copy">
