--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
 <body>
 	<div class="floating_box">
 		<h2>Computer Science</h2>
-		<h3><a href="https://github.com/davidward462">GitHub</a></h3>
+		<h3><a href="https://github.com/davidward462" target="_blank" rel="noopener noreferrer">GitHub</a></h3>
         <h3><a href="vimrc.html">Vim Configuration</a><h3>
         <h3><a href="bash_aliases.html">Bash Aliases</a><h3>
-        <!-- <h3><a href="code.html">Code snippets</a></h3> -->
 	</div>
 	
 	<div class="floating_box">
@@ -49,7 +48,7 @@
 	
     <footer>
         <p>BTC: <code>bc1qncek0mwfm3mj5uj45mqv7747t9epxglmcm25wd</code></p>
-        <p>Last updated: March, 2023</p>
+        <p>Last updated: April, 2023</p>
     </footer>
 </body>
 
