add path for IPFS research report

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<h3><a href="https://github.com/davidward462" target="_blank" rel="noopener noreferrer">GitHub</a></h3>
         <h3><a href="vimrc.html">Vim Configuration</a><h3>
         <h3><a href="bash_aliases.html">Bash Aliases</a><h3>
+        <h3><a href="ipfs/research.html">IPFS Research</a><h3>
 	</div>
 	
 	<div class="floating_box">
@@ -48,7 +49,7 @@
 	
     <footer>
         <p>BTC: <code>bc1qncek0mwfm3mj5uj45mqv7747t9epxglmcm25wd</code></p>
-        <p>Last updated: April, 2023</p>
+        <p>Last updated: October, 2023</p>
     </footer>
 </body>
 
