--- a/vimrc.html
+++ b/vimrc.html
@@ -2,7 +2,9 @@
 <html lang="en">
 
 <head>
+	<title>Vimrc | David's Site</title>
 	<link rel="stylesheet" href="style.css">
+	<link rel="icon" type="image\x-icon" href="images/cube_2.ico">
 </head>
 
 <body>
