--- a/writing/The_Citadel_of_Forever.html
+++ b/writing/The_Citadel_of_Forever.html
@@ -2,7 +2,9 @@
 <html lang="en">
 
 <head>
-	<link rel="stylesheet" href="../style.css">
+	<title>Citadel of Forever | David's Site</title>
+	<link rel='stylesheet' href='../style.css'>
+	<link rel="icon" type="image\x-icon" href="../images/cube_2.ico">
 </head>
 
 <body>
