--- a/index.html
+++ b/index.html
@@ -23,27 +23,8 @@
 	<div class="floating_box">
 		<h2>Writing</h2>
 				
-			<h3><a href="writing/Memories.html">Memories</a></h3>
-			<p class="indent">Science Fiction, 4 minute read</p>
+			<h3><a href="short_Stories.html">Short Stories</a></h3>
 
-			<h3><a href="writing/The_Citadel_of_Forever.html">The Citadel of Forever</a></h3>
-			<p class="indent">Science Fiction, 4 minute read</p>
-
-			<h3><a href="writing/The_Apprentice.html">The Apprentice</a></h3>
-			<p class="indent">Fantasy, 9 minute read</p>
-
-			<h3><a href="writing/Travelers.html">Travelers</a></h3>
-			<p class="indent">Science Fiction, 3 minute read</p>
-
-			<h3><a href="writing/Sunday_Morning.html">Sunday Morning</a></h3>
-			<p class="indent">Horror, 2 minute read</p>
-
-			<h3><a href="writing/Death.html">Death</a></h3>
-			<p class="indent">Fantasy, 2 minute read</p>
-
-			<h3><a href="writing/Cigarette_Man.html">Cigarette Man</a></h3>
-			<p class="indent">Science Fiction, 5 minute read</p>
-		<br>		
 		<h2><a href="poetry.html">Poetry</a></h2>
 	</div>
 	
