add back button to short story pages

--- a/short-stories/Memories.html
+++ b/short-stories/Memories.html
@@ -107,7 +107,7 @@ Simon's mind was a hurricane of memories, thoughts, and emotions. He struggled t
 </div>
 
 <footer>
-	<p><a href='../index.html'>home</a></p>
+	<p><a href='../short_Stories.html'>back</a></p>
 </body>
 
 </body>
