--- a/short-stories/The_Citadel_of_Forever.html
+++ b/short-stories/The_Citadel_of_Forever.html
@@ -38,7 +38,7 @@
 </div>
 
 <footer>
-	<p><a href="../index.html">home</a></p>
+	<p><a href="../short_Stories.html">back</a></p>
 </body>
 
 </body>
