--- a/short-stories/Sunday_Morning.html
+++ b/short-stories/Sunday_Morning.html
@@ -21,7 +21,7 @@
 </div>
 
 <footer>
-	<p><a href="../index.html">home</a></p>
+	<p><a href='../short_Stories.html'>back</a></p>
 </body>
 
 </body>
