--- a/short-stories/The_Apprentice.html
+++ b/short-stories/The_Apprentice.html
@@ -109,7 +109,7 @@
 </div>
 
 <footer>
-	<p><a href="../index.html">home</a></p>
+	<p><a href='../short_Stories.html'>back</a></p>
 </body>
 
 </body>
