add proposal pdf

--- a/ipfs/research.html
+++ b/ipfs/research.html
@@ -16,7 +16,7 @@
 	<div class="floating_box">
 		<h2>InterPlanetary File System</h2>
         <h3><a href="https://ipfs.tech">https://ipfs.tech</a><h3>
-
+        <h3><a href="research-project-proposal.pdf">research-project-proposal.pdf</a><h3>
 	</div>
 	
     <footer>
