--- a/ipfs/proposal.html
+++ b/ipfs/proposal.html
@@ -54,7 +54,7 @@
 	</div>
 	
     <footer>
-        <p><a href='../index.html'>home</a></p>
+        <p><a href='../ipfs/research.html'>back</a></p>
     </footer>
 </body>
 
