--- a/ipfs/research.html
+++ b/ipfs/research.html
@@ -17,6 +17,7 @@
 		<h2>InterPlanetary File System</h2>
         <h3><a href="https://ipfs.tech">https://ipfs.tech</a><h3>
         <h3><a href="proposal.html">Research Proposal</a><h3>
+        <h3><a href="updates.html">Updates</a><h3>
 	</div>
 	
     <footer>
