add oct 23 project update

--- a/ipfs/updates.html
+++ b/ipfs/updates.html
@@ -14,6 +14,29 @@
 <body>
 	<div class="floating_box">
         <h3>October 23rd, 2023</h3>
+        <h4>Progress</h4>
+        <p>
+The IPFS whitepaper has been read, along with several research papers describing and assessing the system in general. Notes on the system and summaries of the research papers have also been written. At this point, the general direction of the project will be as follows:
+        </p>
+
+        <p>
+Documentation will be written about the structure and purpose of IPFS by using the whitepaper, IPFS developer docs, and research papers as sources. This will be done to condense and simplify the existing documentation. 
+        </p>
+
+        <h4>Plan</h4>
+        <p>
+The plan is also to do some technical research on the system itself. We will try to host an IPFS and document the process, with emphasis on the user's perspective. We will try to replicate some of the research seen in the papers, which relates to the performance of IPFS (i.e. retrieval  time of objects, latency, etc). An emphasis will be placed on storing and retrieving multimedia-related files like images, video, etc.
+        </p>
+        <p><a href='https://docs.ipfs.tech/concepts/further-reading/academic-papers/'>IPFS Academic Papers</a></p>
+
+        <p>
+Finally, we will make an assessment of the strengths, weaknesses, and overall viability of IPFS. This will include design elements that we want to be included or want to change, and what direction the system should go in the future.
+        </p>
+
+        <h4>Next Steps</h4>
+        <p>
+The next steps of the project include the following: create outline/skeleton of IPFS specification, host node, determine applicable experiments that can be run on the hardware we have, in a reasonable amount of time, host multimedia files on IPFS.
+        </p>
 	</div>
 	
     <footer>
