--- a/ipfs/proposal.html
+++ b/ipfs/proposal.html
@@ -12,7 +12,8 @@
 </div>
 
 <body>
-	<div class="floating_box">
+	<div class="report">
+        <hr>
         <h3><a href="research-project-proposal.pdf">research-project-proposal.pdf</a><h3>
 		<h3>1. Problem</h3>
         	<p>The current client-serve model of the Internet, though it has many benefits, also has a number of
