--- a/ipfs/updates.html
+++ b/ipfs/updates.html
@@ -12,7 +12,8 @@
 </div>
 
 <body>
-	<div class="floating_box">
+	<div class="report">
+        <hr>
         <h2>Oct 23, 2023</h2>
         <h3>Progress</h3>
         <p>
@@ -38,7 +39,8 @@ Finally, we will make an assessment of the strengths, weaknesses, and overall vi
 The next steps of the project include the following: create outline/skeleton of IPFS specification, host node, determine applicable experiments that can be run on the hardware we have, in a reasonable amount of time, host multimedia files on IPFS.
         </p>
 	</div>
-	<div class="floating_box">
+	<div class="report">
+        <hr>
         <h2>Nov 6 2023</h2>
 
         <p>Most of the project time has been spent on research of the IPFS system documentation, reading relevant papers, and creating notes. </p>
@@ -102,7 +104,7 @@ The next steps of the project include the following: create outline/skeleton of 
 
         <p>The research of the performance of IPFS done in [2] was very in-depth and took place over a period of several months. Surveying a decentrilized systems takes a significant amount of time because there are nodes and node clusters all over the world, and many are created and disappear in a matter of hours or days. This depth of data collection will not be feasible in this project, so more time will be dedicated to describing exsisting research rather than doing our own. </p>
 
-        <h2>Project Direction</h2>
+        <h3>Project Direction</h3>
 
         <p>The project will consist of several parts. The first section will be a report describing the technical specifications and components of IPFS. The next section will describe the research that has been done. The third part will be my own research and testing, mostly looking at how easy and effective it is to host and distribute multimedia files over IPFS. More planning needs to go into this section. Finally, as summary will be given on the possible future of a decentralized internet.</p>
 
