add citation links

--- a/ipfs/citations.html
+++ b/ipfs/citations.html
@@ -14,21 +14,21 @@
 <body>
 	<div class="report">
         <hr>
-        <p>[1] J. Benet, "IPFS - Content Addressed, Versioned, P2P File System," arXiv.org, 2014. https://arxiv.org/abs/1407.3561</p>
+        <p>[1] J. Benet, "IPFS - Content Addressed, Versioned, P2P File System," arXiv.org, 2014. <a href="https://arxiv.org/abs/1407.3561">Available</a> </p>
 
-        <p>[2] D. Mazières and M. Frans Kaashoek, "Escaping the evils of centralized control with self-certifying pathnames," Sep. 1998, doi: https://doi.org/10.1145/319195.319213.</p>
+        <p>[2] D. Mazières and M. Frans Kaashoek, "Escaping the evils of centralized control with self-certifying pathnames," Sep. 1998, doi: <a href="https://doi.org/10.1145/319195.319213">https://doi.org/10.1145/319195.319213</a></p>
 
-        <p>[3] "IPFS Documentation | IPFS Docs," docs.ipfs.tech. https://docs.ipfs.tech/</p>
+        <p>[3] "IPFS Documentation | IPFS Docs," docs.ipfs.tech. <a href="https://docs.ipfs.tech/">https://docs.ipfs.tech/</a></p>
 
-        <p>[4] D. Trautwein et al., "Design and evaluation of IPFS," Proceedings of the ACM SIGCOMM 2022 Conference, Aug. 2022, doi: https://doi.org/10.1145/3544216.3544232.</p>
+        <p>[4] D. Trautwein et al., "Design and evaluation of IPFS," Proceedings of the ACM SIGCOMM 2022 Conference, Aug. 2022, doi: <a href="https://doi.org/10.1145/3544216.3544232">https://doi.org/10.1145/3544216.3544232</a>.</p>
 
-        <p>[5] E. S. Daniel and Florian Tschorsch, "IPFS and Friends: A Qualitative Comparison of Next Generation Peer-to-Peer Data Networks," arXiv (Cornell University), Feb. 2021, doi: https://doi.org/10.48550/arxiv.2102.12737.</p>
+        <p>[5] E. S. Daniel and Florian Tschorsch, "IPFS and Friends: A Qualitative Comparison of Next Generation Peer-to-Peer Data Networks," arXiv (Cornell University), Feb. 2021, doi: <a href="https://doi.org/10.48550/arxiv.2102.12737">https://doi.org/10.48550/arxiv.2102.12737</a>.</p>
 
-        <p>[6] "Toward Decentralized Cloud Storage With IPFS: Opportunities, Challenges, and Future Considerations | IEEE Journals & Magazine | IEEE Xplore," ieeexplore.ieee.org. https://ieeexplore.ieee.org/document/9903549.</p>
+        <p>[6] "Toward Decentralized Cloud Storage With IPFS: Opportunities, Challenges, and Future Considerations | IEEE Journals & Magazine | IEEE Xplore," ieeexplore.ieee.org. <a href="https://ieeexplore.ieee.org/document/9903549">Available</a>.</p>
 
-        <p>[7] "IPFS - the perspective storage infrastructure for scientific data - presentation," zenodo.org, doi: https://doi.org/10.5281/zenodo.4742585.</p>
+        <p>[7] "IPFS - the perspective storage infrastructure for scientific data - presentation," zenodo.org, doi: <a href="https://doi.org/10.5281/zenodo.4742585">https://doi.org/10.5281/zenodo.4742585</a>.</p>
 
-        <p>[8] I. Baumgart and S. Mies, "S/Kademlia: A Practicable Approach Towards Secure Key-Based Routing." Accessed: Nov. 13, 2023. [Online]. Available: https://web.archive.org/web/20170809130252id_/http://www.tm.uka.de/doc/SKademlia_2007.pdf</p>
+        <p>[8] I. Baumgart and S. Mies, "S/Kademlia: A Practicable Approach Towards Secure Key-Based Routing." Accessed: Nov. 13, 2023. [Online]. <a href="https://web.archive.org/web/20170809130252id_/http://www.tm.uka.de/doc/SKademlia_2007.pdf">Available</a></p>
 	</div>
 	
     <footer>
