add link to citations

--- a/ipfs/citations.html
+++ b/ipfs/citations.html
@@ -32,7 +32,7 @@
 	</div>
 	
     <footer>
-        <p><a href='../ipfs/research.html'>back</a></p>
+        <p><a href='../ipfs/research.html'>research</a></p>
     </footer>
 </body>
 
