--- a/ipfs/research.html
+++ b/ipfs/research.html
@@ -18,6 +18,7 @@
         <h3><a href="https://ipfs.tech">https://ipfs.tech</a><h3>
         <h3><a href="proposal.html">Research Proposal</a><h3>
         <h3><a href="updates.html">Updates</a><h3>
+        <h3><a href="citations.html">Citations</a><h3>
 	</div>
 	
     <footer>
