--- a/ipfs/updates.html
+++ b/ipfs/updates.html
@@ -109,8 +109,9 @@ The next steps of the project include the following: create outline/skeleton of 
         <p>The project will consist of several parts. The first section will be a report describing the technical specifications and components of IPFS. The next section will describe the research that has been done. The third part will be my own research and testing, mostly looking at how easy and effective it is to host and distribute multimedia files over IPFS. More planning needs to go into this section. Finally, as summary will be given on the possible future of a decentralized internet.</p>
 
 	</div>
-	
+
     <footer>
+        <p><a href='../ipfs/citations.html'>citations</a></p>
         <p><a href='../ipfs/research.html'>back</a></p>
     </footer>
 </body>
