change how citations are referenced

--- a/ipfs/updates.html
+++ b/ipfs/updates.html
@@ -57,21 +57,7 @@
         <p>Most of the project time has been spent on research of the IPFS system documentation, reading relevant 
         papers, and creating notes.</p>
 
-        <p>Primary references:</p>
-
-        <p>[1] "IPFS - Content Addressed, Versioned, P2P File System", <a href="https://raw.githubusercontent.com/ipfs/papers/master/ipfs-cap2pfs/ipfs-p2p-file-system.pdf">https://raw.githubusercontent.com/ipfs/papers/master/ipfs-cap2pfs/ipfs-p2p-file-system.pdf</a></p>
-
-        <p>[2] "Design and Evaluation of IPFS:
-
-        A Storage Layer for the Decentralized Web", <a href="https://ipfs.io/ipfs/bafybeid6doxhzck3me366265u3ony6rbuzv7dze7pjuptxeln24b2qvur4?filename=trautwein2022a.pdf">https://ipfs.io/ipfs/bafybeid6doxhzck3me366265u3ony6rbuzv7dze7pjuptxeln24b2qvur4?filename=trautwein2022a.pdf</a></p>
-
-        <p>[3] "IPFS and Friends: A Qualitative Comparison of Next Generation Peer-to-Peer Data Networks", Available: <a href="https://arxiv.org/abs/2102.12737">https://arxiv.org/abs/2102.12737</a></p>
-
-        <p>[4] "Toward Decentralized Cloud Storage With IPFS: Opportunities, Challenges, and Future Considerations", Available: <a href="https://ieeexplore.ieee.org/document/9903549">https://ieeexplore.ieee.org/document/9903549</a></p>
-        <p>[5] <a href="https://ipfs.tech/">https://ipfs.tech/</a></p>
-
-        <p>The above references are the main sources for the system specifications. A summary of the system has 
-        been written, which will be used in the main report. Here are some key aspects of IPFS:</p>
+        <p>Primary references: see <a href='../ipfs/citations.html'>citations</a></p>
 
         <h3>Introduction to IPFS</h3>
 
