--- a/bash_aliases.html
+++ b/bash_aliases.html
@@ -4,7 +4,7 @@
 <head>
 	<title>Bash Aliases | David's Site</title>
 	<link rel="stylesheet" href="style.css">		
-	<link rel="icon" type="image\x-icon" href="images/cube_2.ico">
+	<link rel="icon" type="image\x-icon" href="images/cube.ico">
 </head>
 
 <body>
