--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<title>David's Site</title>
 	<link rel="stylesheet" href="style.css">
-	<link rel="icon" type="image\x-icon" href="images/cube_2.ico">
+	<link rel="icon" type="image\x-icon" href="images/cube.ico">
 </head>
 
 <div class="title">
