--- a/short-stories/Sunday_Morning.html
+++ b/short-stories/Sunday_Morning.html
@@ -4,7 +4,7 @@
 <head>
 	<title>Sunday Morning | David's Site</title>
 	<link rel='stylesheet' href='../style.css'>
-	<link rel="icon" type="image\x-icon" href="../images/cube_2.ico">
+	<link rel="icon" type="image\x-icon" href="../images/cube.ico">
 </head>
 
 <body>
