--- a/ipfs/project-demo.html
+++ b/ipfs/project-demo.html
@@ -10,7 +10,7 @@
 <div class="title">
 	<h1>Project Demo</h1>
 
-	<video width="320" height="240" controls>
+	<video class="center" width="640" height="360" controls>
 		<source src="demo.mp4" type="video/mp4">
 		Your browser does not support the video tag.
 	</video> 
