--- a/ipfs/research.html
+++ b/ipfs/research.html
@@ -19,6 +19,7 @@
         <h3><a href="proposal.html">Research Proposal</a><h3>
         <h3><a href="updates.html">Updates</a><h3>
         <h3><a href="project-demo.html">Project Demo</a><h3>
+        <h3><a href="report.html">Report</a><h3>
         <h3><a href="citations.html">Citations</a><h3>
 	</div>
 	
