--- a/ipfs/project-demo.html
+++ b/ipfs/project-demo.html
@@ -9,12 +9,8 @@
 
 <div class="title">
 	<h1>Project Demo</h1>
-
-	<video class="center" width="640" height="360" controls>
-		<source src="demo.mp4" type="video/mp4">
-		Your browser does not support the video tag.
-	</video> 
-
+        <hr>
+        <iframe width="560" height="315" class="center" src="https://www.youtube.com/embed/l7BIEpbLLOk?si=w10mTMfUePuSEmHs"></iframe> 
 </div>
 
 <body>
