--- a/ipfs/report.html
+++ b/ipfs/report.html
@@ -10,6 +10,11 @@
 <div class="title">
 	<h1>Project Report</h1>
 
+<div class="report">
+    <hr>
+    <h3><a href="report.pdf">report.pdf</a><h3>
+</div>
+
 </div>
 
 <body>
