spelling and grammer edits

--- a/ipfs/final-thoughts.html
+++ b/ipfs/final-thoughts.html
@@ -19,23 +19,23 @@
 
         <p>
         Based on some feedback, I will say a few words at a high level about the purpose and value of IPFS. The 
-        main benefit of the system is directly about how it functions, and not so much about some feature that is 
-        provides. Yes, IPFS has forms of file-version, and some other interesting things, but the main purpose 
-        is that it is decentralized. It is a system that is more robust than most other server-based approaches 
+        main benefit of the system is about how it functions, and not so much about features that it 
+        provides. Yes, IPFS has file-versioning and some other interesting things, but the main purpose 
+        is it's decentralized nature. It is a system that is more robust than most other server-based approaches 
         because it does not rely on someone to provide hosting. 
         </p>
 
         <h2>Report Reflections</h2>
         <p>
         Overall, the report writing went fairly well. The main issue I encountered early on is how difficult it 
-        is to do good-quality research on IPFS because it is not centralized, and the research papers I read 
-        agreed on this. I was thankful that others had undertaken this work, but that did not leave me with as 
-        much to do on my own as I expected. While in theory it would have been possible to do some data collection 
-        on IPFS, it would have taken quite a lot of coding and would probably just replicated what others had 
-        found, at a smaller scale and less reliability. 
+        is to do good-quality research on IPFS because it is not centralized. The research papers I read 
+        agreed on this difficulty. I was thankful that others had undertaken this work, but that did not leave me with as 
+        much to do on my own as I expected. While it would have been possible to do some more detailed data collection 
+        on IPFS, I predict it would have taken a lot of coding and would probably have just replicated what others had 
+        found, at a smaller scale and with less reliability. 
 
-        Something I did not cover that certainly warrants investigation is IPFS gateways. This is the way that 
-        the IPFS network can directly interface with HTTP on the standard web. This is how someone can access a 
+        Something I did not cover that warrants investigation are IPFS gateways. This is the way that 
+        the IPFS network can directly interface with HTTP on the standard web. This method allows someone to access a 
         file hosted on IPFS through a regular browser, because otherwise this would not be possible. Herein lies 
         the main issue in connecting IPFS with the rest of the Internet. I do not know what the solution is how 
         how this should be addressed in the future, but it is an appropriate topic for further research and 
