add the enemy poem

--- a/poetry.html
+++ b/poetry.html
@@ -14,7 +14,41 @@
 <h2 class="title">The House on the Hill</h2>
 
 <p>
-<br>Along the path<br>to find at last<br>the house that all have shunned.<br>Through the gate<br>no longer wait<br>to walk without the sun.<br>Into its depths<br>you walk bereft<br>of any shame or fear.<br>For in your heart<br>all 'round is dark,<br>but in your mind is clear.
+Along the path
+<br>to find at last
+<br>the house that all have shunned.
+<br>Through the gate
+<br>no longer wait
+<br>to walk without the sun.
+<br>Into its depths
+<br>you walk bereft
+<br>of any shame or fear.
+<br>For in your heart
+<br>all 'round is dark,
+<br>but in your mind is clear.
+</p>
+
+<br>
+<h2 class="title">The Enemy</h2>
+<p>
+From his homeland he marched; 
+<br>Proud son, fearless warrior.
+<br>For his nation he fought;
+<br>Through the mud and rubble he trod,
+<br>spilling blood, taking lives. 
+<br>A righteous mission for the greater good.
+<br>In his own heart he marched for the love of his nation.
+<br>But in my eyes he marched for hate.
+<br>So I killed him. And as my gunshots rang out
+<br>and he fell before me,
+<br>with a dark pool swelling beneath him, I was proud.
+<br>I was the hero! 
+<br>Defender of Peace, Soldier of Justice,
+<br>proud son, fearless warrior. 
+<br>Because those like him, the soldiers of hate,
+<br>they must die!  
+<br>Mustn’t they?
+<br>For it is, of course, my righteous mission. 
 </p>
 
 </div>
