add the pilgrim

--- a/poetry.html
+++ b/poetry.html
@@ -51,6 +51,47 @@ From his homeland he marched;
 <br>For it is, of course, my righteous mission. 
 </p>
 
+<br>
+<h2 class="title">The Pilgrim</h2>
+<p>
+Clad in cloak and bearing mighty blade,
+<br>The Pilgrim treads the wild woods. 
+<br>The churning clouds above
+<br>bring a tempest against an emerald sea,
+<br>And below, the shadows come alive. 
+<br>From the branches, water drips
+<br>Into pools where dark things crawl.
+<br>His glass eye spies twisted metal among the roots,
+<br>Flat rock, up-heaved by Nature and Time. 
+<br>The thistles, with thorns like devil’s claws
+<br>Break upon his iron skin,
+<br>but he is unperturbed.
+<br>
+<br>Now hill he meets, and he ascends,
+<br>His iron grip marring rock, crushing twig and branch. 
+<br>His cloak is tattered, and as the summit is reached 
+<br>It is torn from him by the storm.
+<br>But the wind parts the clouds of heaven, 
+<br>Flooding the earth with golden honey light. 
+<br>The Pilgrim stands; his bones gleaming in the sun. 
+<br>Ahead in view, is single goal,
+<br>The City of Glass. 
+<br>He descends the ragged land.
+<br>
+<br>As The Pilgrim walks between the towers
+<br>They seem to stretch upwards to infinity. 
+<br>At the base of the tallest spire lies The Shrine. 
+<br>Before it, he kneels, 
+<br>And speaks the holy words. 
+<br>As he mutters, from the shrine stares 
+<br>an out-of-place oddity,
+<br>organic, rough, weather-worn.
+<br>A skull, like his, 
+<br>but made of bone, like the creatures of the plains.
+<br>For it is the shine to the Creator.
+The shrine to his GOD called MAN.  
+</p>
+
 </div>
 
 <footer>
