--- a/poetry.html
+++ b/poetry.html
@@ -92,6 +92,23 @@ Clad in cloak and bearing mighty blade,
 The shrine to his GOD called MAN.  
 </p>
 
+<br>
+<h2 class="title">Untitled</h2>
+<p>
+A fetter, in the lighted way, 
+<br>unfurled of blackened course.
+<br>Seen in torchlight, dim and red, 
+<br>amid the grand remorse.
+</p>
+
+<br>
+<h2 class="title">Untitled</h2>
+<p>
+Amid the fields of dancing green,
+<br>the stillness lays thus seen by he
+<br>who, to the grass, touches tenderly.
+</p>
+
 </div>
 
 <footer>
