--- a/poetry.html
+++ b/poetry.html
@@ -47,7 +47,7 @@ From his homeland he marched;
 <br>proud son, fearless warrior. 
 <br>Because those like him, the soldiers of hate,
 <br>they must die!  
-<br>Mustn’t they?
+<br>Mustn't they?
 <br>For it is, of course, my righteous mission. 
 </p>
 
