link story on page

--- a/short_Stories.html
+++ b/short_Stories.html
@@ -32,6 +32,9 @@
 
         <h3><a href="short-stories/Cigarette_Man.html">Cigarette Man</a></h3>
         <p class="indent">Science Fiction, 5 minute read</p>
+
+        <h3><a href="short-stories/On_Another_Shore.html">On Another Shore</a></h3>
+        <p class="indent">Science Fiction, 13 minute read</p>
 	</div class="floating_box">
 
 	<footer><p><a href="index.html">home</a></p></footer>
