--- a/short_Stories.html
+++ b/short_Stories.html
@@ -37,6 +37,10 @@
         <p class="indent">Science Fiction, 13 minute read</p>
 	</div class="floating_box">
 
+        <h3><a href="short-stories/May_16th_2004.html">May 16th, 2004</a></h3>
+        <p class="indent">Fiction, 2 minute read</p>
+	</div class="floating_box">
+
 	<footer><p><a href="index.html">home</a></p></footer>
 
 </body>
