add meta tag for description

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>David's Site</title>
 	<link rel="stylesheet" href="style.css">
 	<link rel="icon" type="image\x-icon" href="images/cube.ico">
+        <meta name="description" content="Computer Science, Linux, Language, and Fiction.">
 </head>
 
 <div class="title">
