--- a/index.html
+++ b/index.html
@@ -2,37 +2,32 @@
 <html lang="en">
 
 <head>
-	<title>David's Site</title>
-	<link rel="stylesheet" href="style.css">
-	<link rel="icon" type="image\x-icon" href="images/cube.ico">
+        <title>David's Site</title>
+        <link rel="stylesheet" href="style.css">
+        <link rel="icon" type="image\x-icon" href="images/cube.ico">
         <meta name="description" content="Computer Science, Linux, Language, and Fiction.">
 </head>
-
-<div class="title">
-	<h1>davidward.io</h1>
-</div>
-
 <body>
-	<div class="floating_box">
-		<h2>Computer Science</h2>
-		<h3><a href="https://github.com/davidward462" target="_blank" rel="noopener noreferrer">GitHub</a></h3>
-        <h3><a href="vimrc.html">Vim Configuration</a><h3>
-        <h3><a href="bash_aliases.html">Bash Aliases</a><h3>
-        <h3><a href="ipfs/research.html">IPFS Research</a><h3>
-	</div>
-	
-	<div class="floating_box">
-		<h2>Writing</h2>
-				
-			<h3><a href="short_Stories.html">Short Stories</a></h3>
+        <div class="title">
+                <h1>davidward.io</h1>
+        </div>
+        <div class="floating_box">
+        <h2>Computer Science</h2>
+        <h3><a href="https://github.com/davidward462" target="_blank" rel="noopener noreferrer">GitHub</a></h3>
+        <h3><a href="vimrc.html">Vim Configuration</a></h3>
+        <h3><a href="bash_aliases.html">Bash Aliases</a></h3>
+        <h3><a href="ipfs/research.html">IPFS Research</a></h3>
+        </div>
+        <div class="floating_box">
+                <h2>Writing</h2>
+                        <h3><a href="short_Stories.html">Short Stories</a></h3>
 
-		<h2><a href="poetry.html">Poetry</a></h2>
-	</div>
-	
-    <footer>
-        <p>BTC: <code>bc1qncek0mwfm3mj5uj45mqv7747t9epxglmcm25wd</code></p>
-        <p>Last updated: December, 2024</p>
-    </footer>
+                <h2><a href="poetry.html">Poetry</a></h2>
+        </div>
+        <footer>
+                <p>BTC: <code>bc1qncek0mwfm3mj5uj45mqv7747t9epxglmcm25wd</code></p>
+                <p>Last updated: December, 2024</p>
+        </footer>
 </body>
 
 </html>
